test/parsing/ferguson/reserved-domain.chpl
var domain = 0;

proc f(domain) {
}

class domain {
  var domain =0;
}

type domain = real;

proc domain() {
}

proc test() {
  try {
  } catch domain {
  }
}
